name:                solitaire
version:             0.1.0.0
synopsis:            Solitaire built with Brick
homepage:            https://github.com/ambuc/solitaire#readme
license:             BSD3
license-file:        LICENSE
author:              James Adam Buckland
maintainer:          james.adam.buckland@gmail.com
copyright:           2017 James Adam Buckland
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CardTypes
                     , Movement
                     , Render
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , brick == 0.26
                     , containers
                     , microlens
                     , microlens-th
                     , random
                     , random-shuffle
                     , split
                     , vty
  default-language:    Haskell2010

executable solitaire-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick == 0.26
                     , containers
                     , microlens
                     , microlens-th
                     , random
                     , random-shuffle
                     , solitaire
                     , split
                     , vty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ambuc/solitaire
